# dynamic-obstacle-avoidance-robot

./: .gitignore  README.md  requirements.txt
src/dynamic_planner/: package.xml  setup.cfg  setup.py
src/dynamic_planner/dynamic_planner/: dynamic_planner_node.py  goal_bridge.py
src/dynamic_planner/scripts/: fake_mover.py  tb3_obstacle_mover.py
src/tracker_kf/: package.xml  setup.cfg  setup.py
src/tracker_kf/tracker_kf/: tracker_kf_node.py
src/yolo_detector/: package.xml  setup.py
src/yolo_detector/yolo_detector/: yolo_node.py
