[develop]
script_dir=$base/lib/dynamic_planner
[install]
install_scripts=$base/lib/dynamic_planner
[options.entry_points]
console_scripts =
    dynamic_planner_node = dynamic_planner.dynamic_planner_node:main
    goal_bridge = dynamic_planner.goal_bridge:main
    tb3_obstacle_mover = dynamic_planner.tb3_obstacle_mover:main   # if you converted the script to module
